--- a/src/app/componentes/principal/principal/principal.component.html
+++ b/src/app/componentes/principal/principal/principal.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark " *ngIf="!isLogged">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="!isLogged">
     <a class="navbar-brand" href="/principal" *ngIf='!isLogged'>Principal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="!isLogged">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" *ngIf='!isLogged'>
-                <a class="nav-link" [routerLink]="['/principal/nuestros-productos']" routerLinkActive="active"> Nuestros Productos </a>
+                <a class="nav-link" [routerLink]="['/principal/nuestros_productos']" routerLinkActive="active"> Nuestros Productos </a>
             </li>
             <li class="nav-item" *ngIf="!isLogged">
                 <a class="nav-link" [routerLink]="['/principal/Contacto']" routerLinkActive="active"> Contacto </a>
@@ -80,9 +80,15 @@
 <div class="d-flex" *ngIf="isLogged">
     <div id="sidebar-container" class="bg-primario">
         <div class="logo">
-            <h4 class="text-light font-weight-bold">
+            <a class="text-light font-weight-bold" href="/principal">
+                <h4 class="font-weight-bold">
+                    Diseños y Rolados S.A
+                </h4>
+            </a>
+            <!-- <h4 class="text-light font-weight-bold">
+                <a href="/principal"></a>
                 Diseños y Rolados S.A
-            </h4>
+            </h4> -->
         </div>
         <div class="menu">
             <a href="/principal/user/insert" class="d-block text-light p-3">
@@ -94,15 +100,20 @@
             <a href="/principal/user/final" class="d-block text-light p-3">
                 <i class="fas fa-plus-square mr-2 lead"></i> Materia Final
             </a>
-            <a href="/principal/user/inventory" class="d-block text-light p-3">
-                <i class="fas fa-indent mr-2 "></i> Inventario
+            <a class="nav-link dropdown-toggle d-block text-light p-3 bg-primario font-weight-bold" href="/principal/user/inventory" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-indent mr-2"></i> Inventario
             </a>
+            <div class="dropdown-menu bg-primario" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/raw_inventory">Materia Prima</a>
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/intermediate_inventory">Materia Intermedia</a>
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/final_inventory">Materia Final</a>
+            </div>
         </div>
     </div>
     <div class="w-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-silvere">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
