--- a/src/app/componentes/productos/intermedio/intermedio.component.scss
+++ b/src/app/componentes/productos/intermedio/intermedio.component.scss
@@ -35,3 +35,8 @@ a:hover {
 #sidebar-container .menu {
     width: 18rem;
 }
+
+#content {
+    //background-color: #c0c0c0;
+    padding-bottom: 5rem;
+}
