--- a/src/app/componentes/productos/nuevo/nuevo.component.html
+++ b/src/app/componentes/productos/nuevo/nuevo.component.html
@@ -1,23 +1,28 @@
-<div class="d-flex" *ngIf="isLogged">
+<div class="d-flex sticky-top flex-md-nowrap p-0 shadow" *ngIf="isLogged">
     <div id="sidebar-container" class="bg-primario">
         <div class="logo">
-            <h4 class="text-light font-weight-bold">
-                Diseños y Rolados S.A
-            </h4>
+            <a class="text-light font-weight-bold" href="/principal">
+                <h4 class="font-weight-bold">
+                    Diseños y Rolados S.A
+                </h4>
+            </a>
         </div>
-        <div class="menu">
-            <a href="/principal/user/insert" class="d-block text-light p-3">
-                <i class="fas fa-plus-square mr-2 lead"></i> Materia Prima
-            </a>
-            <a href="/principal/user/intermediate" class="d-block text-light p-3">
-                <i class="fas fa-plus-square mr-2 lead"></i> Materia Intermedia
-            </a>
-            <a href="/principal/user/final" class="d-block text-light p-3">
-                <i class="fas fa-plus-square mr-2 lead"></i> Materia Final
-            </a>
-            <a href="/principal/user/inventory" class="d-block text-light p-3">
-                <i class="fas fa-indent mr-2 "></i> Inventario
-            </a>
+        <a href="/principal/user/insert" class="d-block text-light p-3 font-weight-bold">
+            <i class="fas fa-plus-square mr-2 lead"></i> Materia Prima
+        </a>
+        <a href="/principal/user/intermediate" class="d-block text-light p-3 font-weight-bold">
+            <i class="fas fa-plus-square mr-2 lead"></i> Materia Intermedia
+        </a>
+        <a href="/principal/user/final" class="d-block text-light p-3 font-weight-bold">
+            <i class="fas fa-plus-square mr-2 lead"></i> Materia Final
+        </a>
+        <a class="nav-link dropdown-toggle d-block text-light p-3 bg-primario font-weight-bold" href="/principal/user/inventory" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-indent mr-2"></i> Inventario
+        </a>
+        <div class="dropdown-menu bg-primario" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item text-light font-weight-bold" href="principal/user/raw_inventory">Materia Prima</a>
+            <a class="dropdown-item text-light font-weight-bold" href="principal/user/intermedia_inventory">Materia Intermedia</a>
+            <a class="dropdown-item text-light font-weight-bold" href="principal/user/final_inventory">Materia Final</a>
         </div>
     </div>
     <div class="w-100">
@@ -40,14 +45,14 @@
                         <div class="col-lg-12 col-lg-12 col-md-12 mx-auto">
                             <div class="card_login">
                                 <div class="card-header">
-                                    <h1 style="text-align: center;">Ingreso de Materia Prima</h1>
+                                    <h1 style="text-align: center;" class="font-weight-bold">Ingreso de Materia Prima</h1>
                                     <div class="card-body ">
                                         <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
                                             <div class="form-row">
                                                 <div class="form-group col-md-12">
                                                     <label class="font-weight-bold">Proveedor</label>
-                                                    <select class="form-control" id="provedor" name="proveedor" #proveedor="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
-                                                    <option class="placeholder " value="Seleccione "> 
+                                                    <select id="provedor" class="form-control" name="proveedor" #proveedor="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
+                                                    <option class="placeholder " value="Seleccione"> 
                                                         Seleccione un proveedor 
                                                     </option>
                                                     <option *ngFor="let provee of ListarProveedores "> 
@@ -57,15 +62,15 @@
                                                 </div>
                                                 <div class="form-group col-md-12">
                                                     <label class="font-weight-bold">Peso</label>
-                                                    <input type="number" class="form-control" id="peso " name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="">
+                                                    <input id="peso" type="number" class="form-control" name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="">
                                                 </div>
                                                 <div class="form-group col-md-12">
                                                     <label class="font-weight-bold">Codigo</label>
-                                                    <input type="number" class="form-control" id="codigo " name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="">
+                                                    <input id="codigo" type="number" class="form-control" name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="">
                                                 </div>
                                                 <div class="form-group col-md-12">
                                                     <label class="font-weight-bold">Envio</label>
-                                                    <input text="text" class="form-control" id="envio " name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="">
+                                                    <input id="envio" type="text" class="form-control" name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="">
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-12">
