--- a/src/app/componentes/productos/intermedio/intermedio.component.html
+++ b/src/app/componentes/productos/intermedio/intermedio.component.html
@@ -1,29 +1,39 @@
 <div class="d-flex" *ngIf="isLogged">
     <div id="sidebar-container" class="bg-primario">
         <div class="logo">
-            <h4 class="text-light font-weight-bold">
-                Diseños y Rolados S.A
-            </h4>
+            <a class="text-light font-weight-bold" href="/principal">
+                <h4 class="font-weight-bold">
+                    Diseños y Rolados S.A
+                </h4>
+            </a>
         </div>
         <div class="menu">
-            <a href="/principal/user/insert" class="d-block text-light p-3">
+            <a href="/principal/user/insert" class="d-block text-light p-3 font-weight-bold">
                 <i class="fas fa-plus-square mr-2 lead"></i> Materia Prima
             </a>
-            <a href="/principal/user/intermediate" class="d-block text-light p-3">
+            <a href="/principal/user/intermediate" class="d-block text-light p-3 font-weight-bold">
                 <i class="fas fa-plus-square mr-2 lead"></i> Materia Intermedia
             </a>
-            <a href="/principal/user/final" class="d-block text-light p-3">
+            <a href="/principal/user/final" class="d-block text-light p-3 font-weight-bold">
                 <i class="fas fa-plus-square mr-2 lead"></i> Materia Final
             </a>
-            <a href="/principal/user/inventory" class="d-block text-light p-3">
+            <!-- <a href="/principal/user/inventory" class="d-block text-light p-3">
                 <i class="fas fa-indent mr-2 "></i> Inventario
+            </a> -->
+            <a class="nav-link dropdown-toggle d-block text-light p-3 bg-primario font-weight-bold" href="/principal/user/inventory" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-indent mr-2"></i> Inventario
             </a>
+            <div class="dropdown-menu bg-primario" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/raw_inventory">Materia Prima</a>
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/intermedia_inventory">Materia Intermedia</a>
+                <a class="dropdown-item text-light font-weight-bold" href="principal/user/final_inventory">Materia Final</a>
+            </div>
         </div>
     </div>
     <div class="w-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-silvere">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto ">
@@ -40,7 +50,7 @@
                         <div class="col-lg-12 col-lg-6 col-md-4 mx-auto">
                             <div class="card_login">
                                 <div class="card-header">
-                                    <h1 style="text-align: center;">Intermedio</h1>
+                                    <h1 style="text-align: center;" class="font-weight-bold">Ingreso de Materia Intermedia</h1>
                                     <div class="card-body">
                                         <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
                                             <div class="form-row">
