--- a/src/app/componentes/productos/nuevo/nuevo.component.scss
+++ b/src/app/componentes/productos/nuevo/nuevo.component.scss
@@ -35,3 +35,10 @@ a:hover {
 #sidebar-container .menu {
     width: 18rem;
 }
+
+.sticky-top {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+}
