--- a/src/app/componentes/users/login/login.component.scss
+++ b/src/app/componentes/users/login/login.component.scss
@@ -1,3 +1,10 @@
 .mb-5 {
-    padding-top: 15%;
+    padding-top: 25vh;
 }
+
+// body .img-fluid {
+//     background-color: black;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-attachment: fixed;
+// }
