--- a/src/app/componentes/users/login/login.component.html
+++ b/src/app/componentes/users/login/login.component.html
@@ -1,4 +1,4 @@
-<section id="login" class="mb-5">
+<!--<section id="login" class="mb-5">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-4 mx-auto">
@@ -25,4 +25,34 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
+<div class="container-fluid">
+  <div class="row no-gutter">
+    <div class="d-none d-md-flex col-md-6 col-lg-6 bg-image"></div>
+    <div class="col-md-8 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-8 mx-auto">
+              <h3 class="login-heading mb-6 font-weight-bold" style="text-align: center;">Bienvenido</h3>
+              <form (submit)="onSubmitLogin()">
+                <div class="form-label-group">
+                  <input id="email" type="email" class="form-control" name="email"  [(ngModel)]="email" placeholder="Correo Electronico" required autofocus>
+                  <label for="email">Correo Electronico</label>
+                </div>
+
+                <div class="form-label-group">
+                  <input id="inputPassword" type="password" class="form-control" placeholder="Contraseña" required>
+                  <label for="inputPassword">Contraseña</label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit" (click)="onSubmitLogin()">
+                  Inicio de sesion
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
