--- a/src/app/componentes/users/login/login.component.html
+++ b/src/app/componentes/users/login/login.component.html
@@ -42,8 +42,8 @@
                 </div>
 
                 <div class="form-label-group">
-                  <input id="inputPassword" type="password" class="form-control" placeholder="Contraseña" required>
-                  <label for="inputPassword">Contraseña</label>
+                  <input id="password" type="password"  name="password" [(ngModel)]="password" class="form-control" placeholder="Contraseña" required>
+                  <label for="password">Contraseña</label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit" (click)="onSubmitLogin()">
                   Inicio de sesion
