--- a/src/app/componentes/users/login/login.component.scss
+++ b/src/app/componentes/users/login/login.component.scss
@@ -41,7 +41,7 @@
 
 .form-label-group>input,
 .form-label-group>label {
-    // padding: var(--input-padding-y) var(--input-padding-x);
+    padding: var(--input-padding-y) var(--input-padding-x);
     height: auto;
     border-radius: 10rem;
 }
